--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,12 @@
 		<repository>
 			<id>java.net2</id>
 			<name>Repository hosting the jee6 artifacts</name>
-			<url>http://download.java.net/maven/2</url>
+			<url>https://download.java.net/maven/2</url>
 		</repository>
 		<repository>
 			<id>java.net.glassfish</id>
 			<name>Repository hosting the jee6 artifacts from glassfish reference implementation</name>
-			<url>http://download.java.net/maven/glassfish/</url>
+			<url>https://download.java.net/maven/glassfish/</url>
 		</repository>
 	</repositories>
 
